Remove 1 excessive pixel from list height causes y-overflow issue in css filter change

--- a/templates/pixelegg/app.less
+++ b/templates/pixelegg/app.less
@@ -14,10 +14,10 @@
 
 .slideIsUp #egw_fw_sidebar_r {
 	top: 45px;
-	height: ~"calc(100% - 45px)";
+	height: ~"calc(100% - 46px)";
 }
 div#egw_fw_sidebar_r {
-	height: ~"calc(100% - 45px)"; 
+	height: ~"calc(100% - 46px)";
 }
 #status-room .countdown-dialog td.timer #status-room_join {
 	width: ~"calc(100% - 6px)";
